<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game Story</string>
    <string name="action_settings">Schermo Attivo</string>
    <string name="settings">Impostazioni</string>
    <string name="Titolo">Game Story</string>
    
     <string name="Read">Leggi</string>
     <string name="Help">Aiuto</string>
     <string name="About">Riconoscimenti</string>
     
     
     <!-- Riconoscimenti -->
    
     <string name="rate">Vota il Gioco</string>
     <string name="sito">emulk</string>
	<string name="indietro">Indietro</string>
	<string name="creato">Creato da: Orgest Shehaj e Michel Goitom Tucu, inoltre si ringraziano i familiari e gli amici per il supporto e il game testing!</string>
	
	
	<!-- Help -->
	<string name="HelpGame">Come giocare:</string>
	<string name="IndietroHelp">Indietro</string>
	<string name="helpstory">Aiuto</string>
	
	<!-- Read -->
	<string name="ReadTitle">Crea la tua storia</string>
	<string name="story1">Il cavaliere oscuro</string>
	<string name="guerra">.. La Guerra</string>
	<string name="submit">Vota</string>
	
	<string name="IndietroRead">Indietro</string>
	
	<!-- story1 -->
	<string name="avanti">Avanti</string>
	
	<!-- Guerra -->
	<string name="guerrastory">Guerra</string>
	<string name="avantig">Avanti</string>
	<string name="indietrog">Indietro</string>
     
     
</resources>
