<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
       
        
      
        android:background="@drawable/redbutton"
        android:textColor="@color/DarkBlue"
        android:text="@string/IndietroHelp" />

    <TextView
        android:id="@+id/helpstory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:maxLength="2000"
        android:maxLines="18"
        android:scrollbars="vertical"
        android:text="@string/helpstory"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:padding="2dp"
        android:shadowDx="10"
        android:shadowRadius="10"
        android:text="@string/HelpGame"
        android:textColor="@color/SkyBlue"
        android:textSize="20sp" />

</RelativeLayout>