<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".partenzza" >

    <TextView
        android:id="@+id/story1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:maxLines="18"
        android:scrollHorizontally="true"
        android:scrollbars="vertical"
        android:text="@string/story1"
        android:textColor="@color/FColor2"
        android:textSize="14sp" />

    <Button
        android:id="@+id/indietro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="17dp"
        android:gravity="center"
	    android:textColor="@color/FColor"
        android:background="@drawable/zedbutton"
        android:text="@string/indietro" />

    <Button
        android:id="@+id/avanti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/indietro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/avanti"
        android:textColor="@color/FColor"
        android:background="@drawable/zedbutton" />

</RelativeLayout>
