<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgColor"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:clickable="true"
        android:padding="20dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:shadowColor="#00ccff" 
        android:shadowRadius="1.5"  
        android:shadowDx="1"  
        android:shadowDy="1"  
        
        
        android:text="@string/Titolo"
        android:textSize="40sp"
        android:textColor="@color/Silver" 
        />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:angle="40"
        android:background="@drawable/zedbutton"
        android:radius="50dp"
        android:text="@string/About"
        android:textColor="@color/FColor" />

    <Button
        android:id="@+id/readButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/aboutButton"
        android:layout_alignLeft="@+id/aboutButton"
        android:layout_alignParentRight="true"
        android:background="@drawable/zedbutton"
        android:text="@string/Read"
        android:textColor="@color/FColor" />

    <Button
        android:id="@+id/obiettivi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:background="@drawable/obiettivo" />

</RelativeLayout>