<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgColor"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/story1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/zedbutton2"
        android:text="@string/story1"
        
        android:textColor="@color/FColor" />

    <Button
        android:id="@+id/Indietroread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/IndietroRead"
       
        android:textColor="@color/FColor"
        android:background="@drawable/zedbutton" />

    <ImageButton
        android:id="@+id/star3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/star2"
        android:layout_toLeftOf="@+id/star2"
        android:background="#00ffffff"
        android:contentDescription="TODO"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:src="@drawable/star" />

    <ImageButton
        android:id="@+id/star2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/guerra"
        android:layout_below="@+id/guerra"
        android:background="#00ffffff"
        android:contentDescription="TODO"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:src="@drawable/star" />

    <ImageButton
        android:id="@+id/ImageButton01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/star3"
        android:layout_toLeftOf="@+id/star3"
        android:background="#00ffffff"
        android:contentDescription="TODO"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:src="@drawable/star" />

    <ImageButton
        android:id="@+id/ImageButton02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/story1"
        android:background="#00ffffff"
        android:contentDescription="TODO"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:src="@drawable/star" />

    <ImageButton
        android:id="@+id/ImageButton03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ImageButton02"
        android:layout_toRightOf="@+id/ImageButton01"
        android:background="#00ffffff"
        android:contentDescription="TODO"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:src="@drawable/star" />

    <ImageButton
        android:id="@+id/ImageButton04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ImageButton03"
        android:layout_toLeftOf="@+id/ImageButton03"
        android:background="#00ffffff"
        android:contentDescription="TODO"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:src="@drawable/star" />

    <Button
        android:id="@+id/guerra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/story1"
        android:layout_alignRight="@+id/ImageButton02"
        android:layout_below="@+id/ImageButton02"
        android:layout_marginTop="17dp"
        android:background="@drawable/zedbutton2"
        android:text="@string/guerra"
        android:textColor="@color/FColor" />

</RelativeLayout>